# yt-playlist-export

./: .gitignore  README.md  pyproject.toml  yt-playlist-export.py  yt-playlist.py
src/yt_playlist_export/: __init__.py  __main__.py  yt_playlist_export.py
